[tool.poetry]
name = "qute_1password"
version = "0.1.0"
description = "Userscript to help fill credentials with the 1password CLI"
authors = ["Felipe Martin <me@fmartingr.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
rope = "*"
ipdb = "*"
pylint = "*"
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
